--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 name: CI Pipeline
-
 on:
   push:
     branches: [ main ]
@@ -25,6 +24,10 @@ jobs:
     - name: Run tests
       run: npm test
       
-    - name: Build
-      run: npm run build || echo "No build script"
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-build
+        path: .
+
 
