--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,28 +1,30 @@
 name: CD Deploy to EC2
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: [ "CI" ]          # must match the CI workflow name
+    types:
+      - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    needs: ci  # Only runs if CI passes
-    
+
     steps:
     - name: Deploy to EC2
-      uses: appleboy/ssh-action@v1.5.1
+      uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
-          cd ~/devops-practice || git clone https://github.com/mayur-sarang/devops-practice.git ~/devops-practice
+          cd ~/devops-practice || git clone https://github.com/YOURUSERNAME/devops-practice.git ~/devops-practice
           cd ~/devops-practice
           git pull origin main
           npm ci
           pkill node || true
           nohup npm start > app.log 2>&1 &
           sleep 5
-          curl -f http://localhost:3000 || exit 1
-          echo "✅ Deployed successfully!"
+          curl -f http://localhost:3000
+          echo "✅ Deploy successful"
